# ChangeLog for dev-perl/NetAddr-IP
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetAddr-IP/ChangeLog,v 1.37 2011/11/05 09:10:02 tove Exp $

*NetAddr-IP-4.56.0 (05 Nov 2011)

  05 Nov 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.56.0.ebuild:
  Version bump

*NetAddr-IP-4.55.0 (30 Oct 2011)

  30 Oct 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.55.0.ebuild:
  Version bump

*NetAddr-IP-4.48.0 (19 Oct 2011)

  19 Oct 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.48.0.ebuild:
  Version bump

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -NetAddr-IP-4.42.0.ebuild,
  -NetAddr-IP-4.43.0.ebuild:
  Cleanup

*NetAddr-IP-4.44.0 (19 May 2011)

  19 May 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.44.0.ebuild:
  Version bump

*NetAddr-IP-4.43.0 (07 Apr 2011)

  07 Apr 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.43.0.ebuild:
  Version bump

  02 Apr 2011; Torsten Veller <tove@gentoo.org> -NetAddr-IP-4.037.ebuild,
  -NetAddr-IP-4.38.ebuild, -NetAddr-IP-4.39.ebuild, -NetAddr-IP-4.40.ebuild,
  -NetAddr-IP-4.41.0.ebuild:
  Cleanup

  30 Mar 2011; Michael Weber <xmw@gentoo.org> NetAddr-IP-4.42.0.ebuild:
  added ~arm (bug 302981)

*NetAddr-IP-4.42.0 (23 Mar 2011)

  23 Mar 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.42.0.ebuild:
  Version bump

*NetAddr-IP-4.41.0 (09 Mar 2011)

  09 Mar 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.41.0.ebuild:
  Version bump

*NetAddr-IP-4.40 (20 Feb 2011)

  20 Feb 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.40.ebuild:
  Version bump

*NetAddr-IP-4.39 (17 Feb 2011)

  17 Feb 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.39.ebuild:
  Version bump

*NetAddr-IP-4.38 (12 Jan 2011)

  12 Jan 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.38.ebuild:
  Version bump

  29 Dec 2010; Torsten Veller <tove@gentoo.org> -NetAddr-IP-4.030.ebuild,