@@ -6,17 +6,19 @@ DIST NetAddr-IP-4.044.tar.gz 149541 RMD160 4a67e0a29e3989cbaf9d7a47b79e4a0973be4
 DIST NetAddr-IP-4.048.tar.gz 153604 RMD160 a9b75ec233ba6a6588474eb0c23b347713bec511 SHA1 fb2b3d1504465522972f4ac0799c3a2694e82c08 SHA256 965b26917f03141e6400ebd099b6f0957f94017f950ab59d46cbc279e3ca4eeb
 DIST NetAddr-IP-4.055.tar.gz 167425 RMD160 2dff1562de4018302dc507ac5a1275ddec90c9a3 SHA1 5516573cf7a284842f6aa3bae340b31bba0edaa3 SHA256 b38d90f595c329683a28d713af7dc137fc8bffb95a067b2592273ebc578162f6
 DIST NetAddr-IP-4.056.tar.gz 167826 RMD160 17fec90480e1d13a4beca3a274084907aac1831d SHA1 7c933f9d6d58b1c29d75a757758e003fc9710d4e SHA256 a969578b8d028852d17b8c6d8dffa14b9123ea33354b5ede4d5ceff054387b7b
+DIST NetAddr-IP-4.058.tar.gz 168778 RMD160 d5608f72bb319f36127688a0ff1a33a16070aca7 SHA1 8c2578490c1de92e3047ec07f026895fc48802f5 SHA256 1dfa6d99cd31693a0671c7b5518a3c950ff68f557cb7e9c06fbbb1f45c64a0ae
 EBUILD NetAddr-IP-4.028.ebuild 450 RMD160 1d248053dc6ab3a18c02b4b8e46ba1a633172ac7 SHA1 0f07d38cc8d46d2b986d747c905624b87dcad985 SHA256 1b40e8fc0b009984c306ea9b7e1483197cd811ad90c8a3d88b6981855d23454f
 EBUILD NetAddr-IP-4.44.0.ebuild 604 RMD160 5851a8aa1914b7e2fc5feaee2708af405140666a SHA1 844992292e6e709fca0fe263cdc7e15338c44520 SHA256 debad03a51b7c6720cd4213b83292102d798156b3ae7d8bbb1393c36c4769b9f
 EBUILD NetAddr-IP-4.48.0.ebuild 604 RMD160 720c2da1ac61f7d6ba6e6045e0ba2abb61b537a5 SHA1 97db533e38374968961f4af62ee537d91e1b1c7b SHA256 115c53a9c65ccf1f919afdc65d45a431c81bbb3484d2cbac0113e14057ce7528
 EBUILD NetAddr-IP-4.55.0.ebuild 604 RMD160 56094c31e51f42d9f749e202890beaf3306909a2 SHA1 d83936477e5ba5250757c4b8e9186e236657a5aa SHA256 270c88544747456ee21247ba4147897cb2be0439d571176ea72f878c52e4bcd6
 EBUILD NetAddr-IP-4.56.0.ebuild 604 RMD160 542b406a2d8c940301d15de966f93d6de02170a8 SHA1 f4f2800cc8ef1f3d6a971251886e5d2b5d3c74e6 SHA256 3b92d35d1f1ddb8a729847cc3724ff01a84a1ba43ed504c4e8f818d23b07d79a
-MISC ChangeLog 4734 RMD160 e97dec30cd34232b6adaec292b10a14475964fbe SHA1 bd1065dbdf13651652f88fec5464e462d19cb988 SHA256 9480ca8d24c8eab39dba866d1e779353dabcf0d185909e06ae8a6b04bcd5ebd5
+EBUILD NetAddr-IP-4.58.0.ebuild 604 RMD160 3b21866ce1b60b478e838b3041459cb0eefebd64 SHA1 34309f519ee2900b30ec940b2b86bde0c60fa698 SHA256 7056f5524450fa155bc5f1c049f1ba03b9144c263b841b1a73ec21d03c5b11a1
+MISC ChangeLog 4859 RMD160 b157b9f5b658dcff15c5eb2caa135fc68dd90d03 SHA1 8d6564761aa2182ac04d721ae7fd00edd57b00cb SHA256 2ff7c73f41ed80770d992a33b45c1c89e232bf36588c9ea53eeaeb19f0743286
 MISC metadata.xml 355 RMD160 55932046a53859667cf729ac6e8f430e3737359f SHA1 48d7b1e2b93abad2bf4396a4c6200375bf87e32a SHA256 38163ef31f2841cb0a190b229e771e0cd7d382ca06ce3da16bf027784427b99e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk60/XAACgkQV3J2n04EauyFVQCdEdsblKW7ZBGgGw9qq8oGOcjn
-Ib8AoKik1feI1C0GNJE98MSJBY7TsEIc
-=Svrr
+iEYEAREIAAYFAk6+KrQACgkQV3J2n04Eauz6RgCeNG/9WAiCHZ0+E8jbCW2yzb6j
+E5gAn0kpUBTAWKUCYvw370Q4M2AAFrfH
+=OtYh
 -----END PGP SIGNATURE-----
