@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST Test-Fatal-0.003.tar.gz 11256 RMD160 da1c5b37c17e35850760209bca5130bf597ef745 SHA1 3c6f9ddab060561f4173d43457a619a769234e70 SHA256 2725dbddf64a1c6f3a5bf29dc15d167d881716ec35b2abd6e05c05b537f65184
 DIST Test-Fatal-0.006.tar.gz 12616 RMD160 c1becd70ecb24e7da435a2e944b52b5c3cd365b4 SHA1 52b6c449e8c783cf0457cca49acdddd82e33c1e1 SHA256 bdc9906343bc2287a80ee646060ef4850c9b2dbbc78efd63ce00735ce1fd5d51
+DIST Test-Fatal-0.008.tar.gz 12866 RMD160 e1f2289b1d5528725aedf918bd9b81e4ed520952 SHA1 d2756e4c1b57333107895bcdb8c3957be4abaeb4 SHA256 5cca61b381567c325c3d958bd3de582a8bf47c23798106dccd467c770ce16a3f
 EBUILD Test-Fatal-0.003.ebuild 603 RMD160 c29a61f7ca92be32cd5ea561a0b1b514bff59c43 SHA1 1735c383add86b76ed702939176b076dc6154eed SHA256 7b468382c8fae9f458a6277c49e93997c670cd54fe80e31628b3a45340053bff
 EBUILD Test-Fatal-0.6.0.ebuild 651 RMD160 5ebd47d2618e631376e43d6878492acac30f308e SHA1 c5ff71f777a524a52605f75e499894ebafc9ea13 SHA256 6b130aaa5e2c7febf0762c98dff949e892c3ad7b53f492e8d48042eb52a6cbe3
-MISC ChangeLog 1875 RMD160 060e90892f3554344ea99c0e16f19e478b50ddbd SHA1 aef6ef1800cf458e18e92ba65275f2b5fc7b3acd SHA256 744623a7e42252de71d0f6cbc94776d5d98cf2e5207deae9cd98cef41155fe5b
+EBUILD Test-Fatal-0.8.0.ebuild 647 RMD160 c636cf77f9468511185af92556286e9c35daf065 SHA1 c207acf5b740a40193b007071cb4888c11e74b8c SHA256 7423284a48ab2bc4ba41da978714f1237b2888b499845c69827e3a349dea8180
+MISC ChangeLog 1992 RMD160 2cd326fbab973786a25802a1d34ff81c7b63ee65 SHA1 7e8977190caf9c866cb76199f4032cf72d58d534 SHA256 05644a164fa943571972da9390b20707ce680c04eca934e9d6fabe2935f86540
 MISC metadata.xml 236 RMD160 635727d2a38b934edf25c3669cd456be53c594cf SHA1 474774768cb02223bcb008842fee114f4367da81 SHA256 a8a51a8173088a3342e8ca239e7bb2c3e567205fc0c3a34e3b26a027f7e398db
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iJwEAQECAAYFAk5GP0wACgkQIiMqcbOVdxTaEQP/RYuyROBo/6vYYqMm0bj+wHe+
-Ik2dPBk1V0tvzekLVL6uwN2hM9VReUVgEkSLtvCr8AOe+uQ4+61UGBzFvaOs1Ltw
-gPQQh+IK/2QZ4xGaLUrp2BGGAlQH+Er1avW9YeH50OfL8smU5XnHu4p0MhvSWBva
-PpoB3Ebw7sxBfl71jH4=
-=3ZkH
+iEYEAREIAAYFAk6+KGsACgkQV3J2n04Eauy6DACfU54uYHtBX7p2fhBv3101N2T8
+k1UAoIqo9pjMIMH/mSauFfY2KzweWluV
+=WB+z
 -----END PGP SIGNATURE-----
