@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Test-Fatal
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Fatal/ChangeLog,v 1.15 2011/08/13 09:09:09 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Fatal/ChangeLog,v 1.16 2011/11/12 08:03:49 tove Exp $
+
+*Test-Fatal-0.8.0 (12 Nov 2011)
+
+  12 Nov 2011; Torsten Veller <tove@gentoo.org> +Test-Fatal-0.8.0.ebuild:
+  Version bump
 
   13 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> Test-Fatal-0.003.ebuild:
   ppc stable wrt #350853
